# switchable_persona

./: .envrc  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: data_backup.md  三层人格架构.md  五阶段实现细节.md  实现路径.md  面向跨场景适应性的多层级LLM角色扮演框架.md
docs/source/: annotation_sow.rst  case_study.rst  collaboration_guide.rst  conf.py  data_construction.rst  evaluation.rst  implementation.rst  index.rst  intro.rst  training_methods.rst
questionnaires/: BDI.json  BSS.json  PVQ.json  PVQ_response_template.json  SIS.json
scripts/: annotation_server.py  augment_weibo_media_paths.py  backup_data.sh  build_media_map.py  extract_all_weibo.py  prepare_web_dataset.py  restore_data.sh  test_single_post_extract.py
src/switchable_persona/: __init__.py
web/: package.json  tsconfig.json
web/public/sample/: extractions.jsonl
web/scripts/: copy_questionnaires.mjs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: media.ts  parse.ts  storage.ts  types.ts
